# pjatk

./: README.md
GRK/GRK_1/: s30359_1.js  s30359_3.js  s30359_4.js  s30359_5.js  s30359_6.js
GRK/GRK_2/: s30359_1.js  s30359_2.js  s30359_3.js  s30359_4.js  s30359_5.js
GRK/GRK_3/: s30359_1.js  s30359_2.js  s30359_3.js  s30359_4.js  s30359_5.js  s30359_6.js
GRK/GRK_4/: s30359_1.js  s30359_2.js  s30359_3.js  s30359_4.js
GRK/GRK_5/: s30359_1.blend
GRK/GRK_6/: 2.blend
GUI/: README.md
GUI/GUI_1/: Main.java
GUI/GUI_2/: Main.java
GUI/GUI_3/: Main.java
GUI/GUI_4/: .gitignore
GUI/pacman/: Main.java
PJC/: README.md
PJC/PJC_1/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  CMakeLists.txt  main.cpp
PJC/PJC_2/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  CMakeLists.txt  main.cpp
PJC/PJC_3/: 1.cpp  2.cpp  3.cpp  CMakeLists.txt  main.cpp
PJC/PJC_4/: CMakeLists.txt  main.cpp
PJC/PJC_5/: 1.cpp  2.cpp  CMakeLists.txt  main.cpp
PJC/PJC_6/: 1.cpp  2.cpp  3.cpp  4.cpp  CMakeLists.txt  main.cpp
PJC/PJC_6/sudoku/: 2.txt  3.txt
PJC/PJC_8/: CMakeLists.txt  main.cpp
PJC/core/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  CMakeLists.txt  main.cpp
PPJ/: README.md
PPJ/Drones_for_every_occasion/: ChristmasDrone.java  Drone.java  DroneControlRoom.java  Gift.java  Main.java  RacingDrone.java  VampireDrone.java
PPJ/PPJ_03/: Program1.java  Program2.java  Program3.java  Program4.java  Program5.java
PPJ/PPJ_04/: Exercise1.java  Exercise2.java  Exercise3.java  Exercise4.java  Exercise5.java  Exercise6.java  Exercise7.java  Exercise8.java
PPJ/PPJ_05/: Task1.java  Task10.java  Task11.java  Task12.java  Task2.java  Task3.java  Task4.java  Task5.java  Task6.java  Task7.java  Task8.java  Task9.java
PPJ/PPJ_06/: Task1.java  Task2.java  Task3.java  Task4.java  Task5.java  Task6.java  Task7.java  Task8.java
PPJ/PPJ_06_extra/: Task1.java  (+16 more)
RBD/: README.md
SKJ/: README.md
SOP/: README.md
WSI/: README.md
(+550 files in other folders)
